# Henifig

./: .gitignore  CMakeLists.txt  README.md
include/henifig/: errors.hpp  exception.hpp  get.hpp  henifig.hpp  json.hpp  parser.hpp  types.hpp
include/henifig/internal/: logger.hpp
src/: exception.cpp  henifig.cpp  json.cpp  parser.cpp  types.cpp
test/: CMakeLists.txt  main.cpp  test.hfg  test.json
test/cmake/: FindHenifig.cmake
